fixes get_student_by_last_name
