# swagger_server/swagger/swagger.yaml
@@ -8,6 +8,30 @@ basePath: "/service-api"
 schemes:
 - "http"
 paths:
+  /student/:
+    get:
+      summary: "Find student by last name"
+      description: ""
+      operationId: "get_student_by_last_name"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "last_name"
+        in: "query"
+        description: "Last name of student to return"
+        required: true
+        type: "string"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Student"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "student not found"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
   /student:
     post:
       summary: "Add a new student"
@@ -36,29 +60,6 @@ paths:
           description: "Invalid input"
         "409":
           description: "already exists"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
-    get:
-      summary: "Find student by last name"
-      description: ""
-      operationId: "get_student_by_last_name"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "last_name"
-        in: "query"
-        description: "Last name of student to return"
-        required: true
-        type: "string"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Student"
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "student not found"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
   /student/{student_id}:
     get:
